--- a/code/client/package.json
+++ b/code/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mixc",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "main.js",
   "window": {
     "title": "商场导航软件",
@@ -15,7 +15,7 @@
     "show_in_taskbar": true
   },
   "scripts": {
-    "packager": "electron-packager . --platform=win32 --arch=all --electron-version=1.4.13 --out ./package --overwrite --icon=./app.ico"
+    "packager": "electron-packager . --platform=win32 --arch=all --electron-version=1.4.13 --out ./package --overwrite --icon=./favicon.ico"
   },
   "dependencies": {
     "machinepack-zip": "^1.1.0",
