--- a/code/client/windows/MIXC/packages.config
+++ b/code/client/windows/MIXC/packages.config
@@ -4,6 +4,6 @@
   <package id="cef.redist.x86" version="3.2987.1601" targetFramework="net452" />
   <package id="CefSharp.Common" version="57.0.0" targetFramework="net452" />
   <package id="CefSharp.WinForms" version="57.0.0" targetFramework="net452" />
-  <package id="DotNetZip" version="1.10.1" targetFramework="net452" />
+  <package id="ICSharpCode.SharpZipLib.Patched" version="0.86.5" targetFramework="net452" />
   <package id="QRCoder" version="1.2.6" targetFramework="net461" />
 </packages>
