--- a/code/web/package.json
+++ b/code/web/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "element-ui": "^1.0.8",
+    "fabric": "^1.7.11",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "nprogress": "^0.2.0",
     "vue": "^2.1.0",
+    "vue-bus": "^0.3.0",
     "vue-color": "^2.0.5",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1",
