修改变异版本

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ code/client/windows/MIXC/.vs/*
 *.suo
 code/client/windows/MIXC/.vs/MIXC/v14/.suo
 code/server/public/index.html
+
+导航软件x32
+导航软件x32.rar
